--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -553,6 +553,11 @@ pre[class*="language-"] {
   overflow: hidden;
 }
 
+/* Create spacing between header and body rows */
+.markdown table tbody tr:first-child td {
+  padding-top: 15px;
+}
+
 /* Table headers */
 .markdown table thead th {
   background-color: var(--ifm-color-emphasis-200);
@@ -561,14 +566,19 @@ pre[class*="language-"] {
   font-size: 14px;
   padding: 12px 16px;
   text-align: left;
-  border: 1px solid var(--ifm-color-emphasis-300);
+  border-top: 1px solid var(--ifm-color-emphasis-300);
+  border-bottom: 1px solid var(--ifm-color-emphasis-300);
+  border-left: none;
   border-right: none;
 }
+
+
 
 /* First header cell - rounded top-left corner */
 .markdown table thead th:first-child {
   border-top-left-radius: 3px;
   border-bottom-left-radius: 3px;
+  border-left: 1px solid var(--ifm-color-emphasis-300);
 }
 
 /* Last header cell - rounded top-right corner */
@@ -581,8 +591,10 @@ pre[class*="language-"] {
 /* Table body cells */
 .markdown table tbody td {
   padding: 12px 16px;
-  border-bottom: 1px solid var(--ifm-color-emphasis-200);
-  border-right: 1px solid var(--ifm-color-emphasis-200);
+  border-bottom: 0.5px solid var(--ifm-color-emphasis-200);
+  border-right: 0.5px solid var(--ifm-color-emphasis-200);
+  border-left: none;
+  border-top: none;
   color: var(--ifm-color-emphasis-800);
   font-size: 14px;
   line-height: 1.5;
@@ -619,8 +631,8 @@ pre[class*="language-"] {
 }
 
 [data-theme='dark'] .markdown table tbody td {
-  border-bottom-color: var(--ifm-color-emphasis-300);
-  border-right-color: var(--ifm-color-emphasis-300);
+  border-bottom: 0.5px solid var(--ifm-color-emphasis-300);
+  border-right: 0.5px solid var(--ifm-color-emphasis-300);
   color: var(--ifm-color-emphasis-200);
 }
 
